--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t akaciaissa/docker-react -f Dockerfile.dev  .
+  - docker build -t akaciaissa/docker-react .
 
 script:
   - docker run akaciaissa/docker-react npm run test -- --coverage
